[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.0.0"
authors = [
  { name="Ambroise Odonnat", email="ambroiseodonnattechnologie@gmail.com" },
]
description = "Vision Transformer Probing under Distribution Shifts"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "einops",
    "fire",   
    "numpy",
    "omegaconf", 
    "scikit-learn",
    "scipy",
    "torch",
    "torchvision",
    "transformers", 
]

[project.optional-dependencies]

dev = [
    "ruff",      
]

pretrained = [
    "accelerate",              
    "huggingface_hub[hf_xet]",    
    "tiktoken",         
]

visual = [
    "ipykernel",    
    "ipywidgets",   
    "matplotlib",   
    "seaborn",    
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/ambroiseodt/core"
"Documentation" = "https://github.com/ambroiseodt/core#readme"
"Bug Tracker" = "https://github.com/ambroiseodt/core/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E", "F", "W",  # Default rules
  "ANN001",       # Function arguments should annotate types
  "ANN201",       # Public function should annotate return type
  "B",            # Common bugs
  "DTZ",          # Timezone issues
  "I",            # Sort inputs
  "PLE",          # Common errors
  "RUF100",       # Remove unused noqa
  "UP",           # Modern syntax
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
